<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Japanese Language Learning App</string>
    <string name="label_what_sound">What sound does this character make?</string>
    <string name="text_input_hint">Enter your answer here</string>
    <string name="button_answer">Answer</string>
    <string name="button_dont_know">Don\'t know</string>
    <string name="learning">Learn sounds</string>
    <string name="vowel_intro">Learn vowel sounds</string>
    <string name="k_intro">Learn K sounds</string>
    <string name="m_intro">Learn M sounds</string>
    <string name="r_intro">Learn R sounds</string>
    <string name="card_test">Start testing</string>
    <string name="select_mode">Select card mode</string>
    <string name="untimed_mode">Untimed Mode</string>
    <string name="hidden_timer_mode">Hidden Timer Mode</string>
    <string name="emphasized_timer_mode">Emphasized Timer Mode</string>
    <string name="timeout_message">Time\'s up! Moving to next card…</string>
    <string name="session_stats">
    Total Cards: %d\n
    Correct Answers: %d\n
    Incorrect Answers: %d\n
    Timeouts: %d\n
    Total Time: %s\n
    Accuracy: %s
    </string>
    <string name="card_counter">Card %1$d/%2$d</string>
</resources>
