<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#ff123456"
    tools:context=".main">

    <!-- Parent Layout to hold rows -->
    <LinearLayout
        android:id="@+id/button_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center">

            <!-- Vowel -->
            <Button
                android:id="@+id/btn_vowel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vowel_intro"
                android:textSize="20sp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="#9024db"
                android:textColor="#ffffff"
                android:onClick="clickVowelIntro"/>

            <!-- K -->
            <Button
                android:id="@+id/btn_k"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/k_intro"
                android:textSize="20sp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="#9024db"
                android:textColor="#ffffff"
                android:onClick="clickKIntro" />

            <!-- M -->
            <Button
                android:id="@+id/btn_m"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/m_intro"
                android:textSize="20sp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="#9024db"
                android:textColor="#ffffff"
                android:onClick="clickMIntro" />

            <!-- R -->
            <Button
                android:id="@+id/btn_r"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/r_intro"
                android:textSize="20sp"
                android:layout_marginBottom="32dp"
                android:backgroundTint="#9024db"
                android:textColor="#ffffff"
                android:onClick="clickRIntro" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_card_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_test"
            android:textSize="20sp"
            android:backgroundTint="#003cff"
            android:textColor="#ffffff"
            android:onClick="clickCardTest">
        </Button>

    </LinearLayout>

</LinearLayout>
